--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,6 +25,10 @@ jobs:
         force: true 
         add-to-path: true # optional, default is true
   
+  
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v1
+  
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
